# Preferans

./: AUTHORS  CMakeLists.txt  PreferansConfig.h.in  README  README.md  runPref.sh
DBDownloader/: PrefDBDownloader.py
PreferansData/: Preferans.glade
include/: Connection.h  DealResult.h  DealStateType.h  EngineSettings.h  Errors.h  GameSettings.h  Log.h  PrefEngine.h  PrefEngineCallback.h  PrefGameModel.h  PrefModelCallback.h  PrefPlayer.h  PrefServer.h  PrefTypes.h  Preference.h
newalgo/: CMakeLists.txt  common.cpp  common.h  common_ut.cpp  features.cpp  features.h  game.cpp  gamemgr.cpp  gamemgr.h  generate.cpp  generate.h  keras_models.py  layout_sample.cpp  layout_sample.h  layout_sample_ut.cpp  model_predictor_ut.cpp  monte_carlo.cpp  monte_carlo.h  player.cpp  player.h  players_ut.cpp  playout.cpp  playout.h  preparedata.cpp  preparedata.h  pymodels.cpp  pymodels.h  qlearning.py  run_ut.cpp  test.cpp  tf_train.py  tf_train_py2.py  train.cpp  train_model.cpp  train_model.h  utils.h
newalgo/pywrap/: CMakeLists.txt  load_model.py  lstm.py  model.h5  model.json  model2.h5  model2.json  model_lstm.h5  model_lstm.json  predict_moves.py  predict_moves2.py  pref_utils.py  pywrap.cpp  readgames.py  test.py
src/core/: AIPrefPlayer.cpp  AIPrefPlayer.h  Bullet.cpp  Bullet.h  CMakeLists.txt  ContractGamePolicy.cpp  ContractGamePolicy.h  DBConverter.cpp  DBConverter.h  DatabaseParser.cpp  DatabaseParser.h  DealState.cpp  DealState.h  EngineData.cpp  EngineData.h  EngineSettings.cpp  Errors.cpp  Frac.h  GameSettings.cpp  Layout.h  Learning.cpp  Learning.h  LocalPrefServer.cpp  LocalPrefServer.h  MinMaxSolver.h  MinMaxSolver.inl  MiserePolicy.cpp  MiserePolicy.h  MonteCarloSolver.h  MonteCarloSolver.inl  PassoutPolicy.cpp  PassoutPolicy.h  PrefEngineImpl.cpp  PrefEngineImpl.h  PrefGameModelImpl.cpp  PrefGameModelImpl.h  PrefTools.cpp  PrefTools.h  Preference.cpp  Random.h  (+10 more)
src/gui/gtkmm/: BiddingDialog.cpp  BiddingDialog.h  BulletWidget.cpp  BulletWidget.h  CMakeLists.txt  CardWidget.cpp  CardWidget.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerCallback.h  DealScoreWidget.cpp  DealScoreWidget.h  GameController.cpp  GameController.h  ImagesStorage.cpp  ImagesStorage.h  Makefile.am  Makefile.in  PlayerBidWidget.cpp  PlayerBidWidget.h  PrefSlots.cpp  PrefSlots.h  PrefView.cpp  PrefView.h  PrefViewWidget.h  PrefWindow.cpp  PrefWindow.h  Settings.h  main.cpp  precompiled.h
tests/: engine.tests  passout.tests  solvers.tests
